--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-select": "^2.1.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.2",
     "lucide-react": "^0.407.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
